--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link href="youtube-dl/static/style.css" rel="stylesheet">
+  <link href="lux/static/style.css" rel="stylesheet">
 
   <title>yt-dlp</title>
 </head>
@@ -18,13 +18,13 @@
   <div class="container d-flex flex-column text-light text-center">
     <div class="flex-grow-1"></div>
     <div class="jumbotron bg-transparent flex-grow-1">
-      <h1 class="display-4">yt-dlp</h1>
+      <h1 class="display-4">lux</h1>
       <p class="lead">Enter a video url to download the video to the server. Url can be to YouTube or <a class="text-info"
-          href="https://github.com/yt-dlp/yt-dlp/blob/master/supportedsites.md">any
+          href="https://github.com/iawia002/lux#supported-sites">any
           other supported site</a>. The server will automatically download the highest quality version available.</p>
       <hr class="my-4">
       <div>
-        <form action="/youtube-dl/q" method="POST">
+        <form action="/lux/q" method="POST">
           <div class="input-group">
             <input name="url" type="url" class="form-control" placeholder="URL" aria-label="URL" aria-describedby="button-submit" autofocus>
             <select class="custom-select" name="format">
@@ -57,7 +57,7 @@
     </div>
     <footer>
       <div>
-        <p class="text-muted">Web frontend for <a class="text-light" href="https://github.com/yt-dlp/yt-dlp/">yt-dlp</a>,
+        <p class="text-muted">Web frontend for <a class="text-light" href="https://github.com/iawia002/lux/">lux</a>,
           by <a class="text-light" href="https://twitter.com/manbearwiz">@manbearwiz</a>.</p>
       </div>
     </footer>
