--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="Description" content="Web frontend for yt-dlp">
+  <meta name="Description" content="Web frontend for lux">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -27,27 +27,6 @@
         <form action="/lux/q" method="POST">
           <div class="input-group">
             <input name="url" type="url" class="form-control" placeholder="URL" aria-label="URL" aria-describedby="button-submit" autofocus>
-            <select class="custom-select" name="format">
-              <optgroup label="Video">
-                <option value="bestvideo">Best Video</option>
-                <option value="mp4">MP4</option>
-                <option value="flv">Flash Video (FLV)</option>
-                <option value="webm">WebM</option>
-                <option value="ogg">Ogg</option>
-                <option value="mkv">Matroska (MKV)</option>
-                <option value="avi">AVI</option>
-              </optgroup>
-              <optgroup label="Audio">
-                <option value="bestaudio">Best Audio</option>
-                <option value="aac">AAC</option>
-                <option value="flac">FLAC</option>
-                <option value="mp3">MP3</option>
-                <option value="m4a">M4A</option>
-                <option value="opus">Opus</option>
-                <option value="vorbis">Vorbis</option>
-                <option value="wav">WAV</option>
-              </optgroup>
-            </select>
             <div class="input-group-append">
               <button class="btn btn-primary" type="submit" id="button-submit">Submit</button>
             </div>
