--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
           other supported site</a>. The server will automatically download the highest quality version available.</p>
       <hr class="my-4">
       <div>
-        <form action="/lux/q" method="POST">
+        <form name="submitform" action="/lux/q" method="POST">
           <div class="input-group">
             <input name="url" type="url" class="form-control" placeholder="URL" aria-label="URL" aria-describedby="button-submit" autofocus>
             <div class="input-group-append">
-              <button class="btn btn-primary" type="submit" id="button-submit">Submit</button>
+              <button class="btn btn-primary" type="button" id="button-submit" onclick="doSubmit()">Submit</button>
             </div>
+          </div>
+          <div>
+            <label id="result" name="result">Please Submit</label>
           </div>
         </form>
       </div>
@@ -44,9 +47,25 @@
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
+  <script>    
+    function doSubmit(){
+      $.post("/lux/q",
+      {
+        url : submitform.url.value
+      },
+      function(result){
+        debugger;
+        let text = (result.success ? "Success" : "Failed") + ": " + result.url;
+        document.getElementById('result').innerHTML = text;
+
+        submitform.url.value = "";
+      });
+    }
+  </script>
 </body>
 
 </html>
